[project]
name = "cpp-agentic-forge"
version = "0.1.0"
description = "An autonomous multi-agent system orchestrating LLMs to plan, generate, compile, and self-repair production-ready C++ code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "docker>=7.1.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
